<resources>
    <string name="app_name">欧气优选</string>

    <string name="home">首页</string>
    <string name="classify">分类</string>
    <string name="share_bill">拼单</string>
    <string name="shopping_cart">购物车</string>
    <string name="mine">我的</string>

    <string name="developing">开发中</string>
    <string name="input_keyword">请输入关键字</string>
    <string name="share_bill_timer"><![CDATA[拼团倒计时 :<font color="#FF0000">%s</font>]]></string>
    <string name="order_state"><![CDATA[状态 :<font color="#FF0000">%s</font>]]></string>
    <string name="order_state_sub"><![CDATA[订单状态 :<font color="#FF0000">%s</font>]]></string>
    <string name="order_total_price"><![CDATA[总价 :<font color="#000000">￥%s</font>]]></string>
    <string name="order_no"><![CDATA[订单号 :<font color="#000000">%s</font>]]></string>
    <string name="order_time"><![CDATA[下单时间 :<font color="#000000">%s</font>]]></string>
    <string name="supply_stores"><![CDATA[供货商家 :<font color="#000000">%s</font>]]></string>
    <string name="amount_of_goods"><![CDATA[商品金额 :<font color="#000000">%s</font>]]></string>
    <string name="shipping_address"><![CDATA[收货地址 :<font color="#000000">%s</font>]]></string>
    <string name="consignee"><![CDATA[收货人 :<font color="#000000">%s</font>]]></string>
    <string name="mode_of_distribution"><![CDATA[配送方式 :<font color="#000000">%s</font>]]></string>
    <string name="invoice_type"><![CDATA[发票类型 :<font color="#000000">%s</font>]]></string>
    <string name="invoice_title"><![CDATA[发票抬头 :<font color="#000000">%s</font>]]></string>
    <string name="invoice_content"><![CDATA[发票内容 :<font color="#000000">%s</font>]]></string>
    <string name="total_cash"><![CDATA[总计 :<font color="#F5484A">￥%s</font>]]></string>

    <string name="just_now">刚刚</string>
    <string name="minutes_ago">分钟前</string>
    <string name="hours_ago">小时前</string>
    <string name="yesterday">昨天</string>
    <string name="day_before_yesterday">前天</string>
    <string name="days_ago">天前</string>
    <string name="format_all_time">yyyy-MM-dd HH:mm:ss</string>
    <string name="format_time_no_second">yyyy-MM-dd HH:mm</string>
    <string name="format_time_year_month_day">yyyy-MM-dd</string>

    <string name="all">全部</string>
    <string name="wait_pay">待付款</string>
    <string name="wait_receiving">待收货</string>
    <string name="doned">已完成</string>
    <string name="wait_deliver">待发货</string>
    <string name="wait_evaluate">待评价</string>
    <string name="wait_share">待分享</string>
    <string name="order_details">订单详情</string>
    <string name="setting">设置</string>
    <string name="is_default">默认</string>
    <string name="set_default">设为默认</string>

    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="delete_this_address">确定要删除该地址？</string>
    <string name="add">添加</string>
    <string name="edit">编辑</string>
    <string name="done">完成</string>
    <string name="balance">余额：%1$s</string>
    <string name="delete">删除</string>
    <string name="price">￥%1$s</string>
    <string name="price_sub">单价：￥%1$s</string>
    <string name="mine_account">我的账户</string>
    <string name="mine_member">我的会员</string>
    <string name="details">明细</string>
    <string name="mine_coupon">我的优惠卷</string>
    <string name="mine_red_packet">我的红包</string>
    <string name="to_be_used">待使用</string>
    <string name="have_been_used">已使用</string>
    <string name="have_expired">已过期</string>
    <string name="security_center">安全中心</string>
    <string name="collect">收藏</string>
    <string name="collected">已收藏</string>
    <string name="time">2018-12-1 12:33:55</string>
    <string name="comments"><![CDATA[商品评价(<font color="#F5484A">%s</font>)]]></string>

</resources>
