<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/v_all_match_parent_no"
    tools:context="com.lanmei.ouqi.ui.mine.activity.OrderDetailsActivity">

    <include layout="@layout/include_centertitletoolbar" />

    <android.support.v4.widget.NestedScrollView style="@style/match_parent">

        <LinearLayout style="@style/v_all_match_parent_no">

            <LinearLayout style="@style/v_match_parent">

                <com.xson.common.widget.FormatTextView
                    style="@style/text14color666"
                    android:layout_marginLeft="@dimen/d_10dp"
                    android:layout_marginTop="@dimen/d_10dp"
                    app:defaultValue="配送中"
                    app:formatText="@string/order_state_sub" />

                <com.xson.common.widget.FormatTextView
                    style="@style/text14color666"
                    android:layout_marginLeft="@dimen/d_10dp"
                    app:defaultValue="1235544444"
                    app:formatText="@string/order_no" />

                <com.xson.common.widget.FormatTextView
                    style="@style/text14color666"
                    android:layout_marginLeft="@dimen/d_10dp"
                    app:defaultValue="2018-11-28 21:33:12"
                    app:formatText="@string/order_time" />

                <Button
                    android:id="@+id/bt_login"
                    style="@style/button_style"
                    android:text="再次购买" />

            </LinearLayout>

            <TextView style="@style/line_H1dp_divider" />

            <RelativeLayout
                style="@style/match_parent"
                android:background="@color/white"
                android:padding="@dimen/d_10dp">

                <TextView
                    style="@style/text"
                    android:layout_marginLeft="@dimen/d_10dp"
                    android:background="@drawable/order_refund"
                    android:text="申请退款" />

                <TextView
                    style="@style/text"
                    android:layout_centerInParent="true"
                    android:background="@drawable/order_refund"
                    android:text="赢免单" />

                <TextView
                    style="@style/text14colorRed"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/d_10dp"
                    android:background="@drawable/order_sure"
                    android:text="确认收货" />

            </RelativeLayout>

            <LinearLayout
                style="@style/v_match_parent"
                android:layout_marginTop="@dimen/d_10dp">

                <com.xson.common.widget.FormatTextView
                    style="@style/text14color666"
                    android:layout_margin="@dimen/d_10dp"
                    app:defaultValue="东莞嘻嘻嘻嘻惺惺惜惺惺有限公司"
                    app:formatText="@string/supply_stores" />

                <TextView style="@style/line_H1dp_divider" />

                <com.xson.common.widget.FormatTextView
                    style="@style/text14color666"
                    android:layout_margin="@dimen/d_10dp"
                    app:defaultValue="￥97.00 (在线支付)"
                    app:formatText="@string/amount_of_goods" />

                <TextView style="@style/line_H1dp_divider" />

                <com.xson.common.widget.FormatTextView
                    style="@style/text14color666"
                    android:layout_margin="@dimen/d_10dp"
                    app:defaultValue="广东佛山狮山罗村华南装饰城"
                    app:formatText="@string/shipping_address" />

                <TextView style="@style/line_H1dp_divider" />

                <com.xson.common.widget.FormatTextView
                    style="@style/text14color666"
                    android:layout_margin="@dimen/d_10dp"
                    app:defaultValue="kiki 130*****0000"
                    app:formatText="@string/consignee" />

                <TextView style="@style/line_H1dp_divider" />

                <com.xson.common.widget.FormatTextView
                    style="@style/text14color666"
                    android:layout_margin="@dimen/d_10dp"
                    app:defaultValue="中通快递  45661346530123"
                    app:formatText="@string/mode_of_distribution" />

            </LinearLayout>

            <LinearLayout
                style="@style/v_match_parent"
                android:layout_marginTop="@dimen/d_10dp">

                <com.xson.common.widget.FormatTextView
                    style="@style/text14color666"
                    android:layout_margin="@dimen/d_10dp"
                    app:defaultValue="普通发票"
                    app:formatText="@string/invoice_type" />

                <TextView style="@style/line_H1dp_divider" />

                <com.xson.common.widget.FormatTextView
                    style="@style/text14color666"
                    android:layout_margin="@dimen/d_10dp"
                    app:defaultValue="个人"
                    app:formatText="@string/invoice_title" />

                <TextView style="@style/line_H1dp_divider" />

                <com.xson.common.widget.FormatTextView
                    style="@style/text14color666"
                    android:layout_margin="@dimen/d_10dp"
                    app:defaultValue="商品明细"
                    app:formatText="@string/invoice_content" />

            </LinearLayout>

            <LinearLayout
                style="@style/ll_bottom_h"
                android:layout_marginTop="@dimen/d_10dp"
                android:padding="@dimen/d_10dp">

                <TextView
                    style="@style/text_weight"
                    android:drawableLeft="@mipmap/order_details"
                    android:gravity="center_vertical"
                    android:text="商品详情 >" />

                <TextView
                    style="@style/text12color999"
                    android:text="共计2件商品" />

            </LinearLayout>

            <include layout="@layout/item_order_list_sub" />

            <RelativeLayout
                style="@style/match_parent"
                android:background="@drawable/border_bottom_divider"
                android:padding="@dimen/d_10dp">

                <TextView
                    style="@style/text"
                    android:text="商品总额" />

                <TextView
                    style="@style/text14colorRed"
                    android:layout_alignParentRight="true"
                    android:text="￥194" />

            </RelativeLayout>

            <RelativeLayout
                style="@style/match_parent"
                android:background="@drawable/border_bottom_divider"
                android:padding="@dimen/d_10dp">

                <TextView
                    style="@style/text"
                    android:text="运费" />

                <TextView
                    style="@style/text14colorRed"
                    android:layout_alignParentRight="true"
                    android:text="+￥0.00" />

            </RelativeLayout>

            <TextView
                style="@style/text14colorRed"
                android:layout_width="match_parent"
                android:background="@drawable/border_bottom_divider"
                android:padding="@dimen/d_10dp"
                android:text="实付金额：￥194.00" />

            <RelativeLayout
                style="@style/match_parent"
                android:layout_margin="@dimen/d_10dp"
                android:background="@drawable/new_messages_bg">

                <TextView
                    style="@style/text"
                    android:layout_centerInParent="true"
                    android:drawableLeft="@mipmap/mine_11"
                    android:gravity="center_vertical"
                    android:padding="@dimen/d_5dp"
                    android:text="联系客服" />

            </RelativeLayout>

            <include layout="@layout/include_type" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView"
                style="@style/match_parent" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>


</LinearLayout>
